feat: Avance endpoint variables udistrital/argo_documentacion#224
