# src/variables-clausulas/variables-clausulas.controller.ts
@@ -1,29 +1,46 @@
-import { Controller, Get, Post, Body, Patch, Param, Delete } from '@nestjs/common';
+import { Controller, Get, Post, Body, Patch, Param, Delete, Query, HttpStatus, HttpException } from '@nestjs/common';
 import { VariablesClausulasService } from './variables-clausulas.service';
 import { CreateVariablesClausulaDto } from './dto/create-variables-clausula.dto';
+import { ApiOperation, ApiQuery, ApiResponse } from '@nestjs/swagger';
+import { StandardResponse } from 'src/interfaces/responses.interface';
 
 
 @Controller('variables-clausulas')
 export class VariablesClausulasController {
   constructor(private readonly variablesClausulasService: VariablesClausulasService) {}
 
-  @Post()
-  create(@Body() createVariablesClausulaDto: CreateVariablesClausulaDto) {
-    return this.variablesClausulasService.create(createVariablesClausulaDto);
-  }
+  @Get('')
+  @ApiOperation({ summary: 'Consulta las variables del Contrato para las clausulas' })
+  @ApiResponse({
+    status: 200,
+    description: 'Contrato encontrado exitosamente',
+  })
+  @ApiResponse({ status: 400, description: 'Solicitud incorrecta' })
+  @ApiResponse({ status: 404, description: 'Contrato no encontrado' })
+  @ApiResponse({ status: 500, description: 'Error interno del servidor' })
+  async encontrarContratista(
+    @Query('id') id: string,
+  ): Promise<StandardResponse<any>> {
+    if (!id) {
+      return Promise.resolve({
+        Success: false,
+        Status: HttpStatus.BAD_REQUEST,
+        Message: 'El id es requerido',
+      });
+    }
+    const result = await this.variablesClausulasService.dataVaribles(id);
 
-  @Get()
-  findAll() {
-    return this.variablesClausulasService.findAll();
+    if (!result.Success) {
+      throw new HttpException(
+        {
+          Success: false,
+          Status: result.Status,
+          Message: result.Message,
+        },
+        result.Status,
+      );
+    }
+    return result;
   }
-
-  @Get(':id')
-  findOne(@Param('id') id: string) {
-    return this.variablesClausulasService.findOne(+id);
-  }
-
-  @Delete(':id')
-  remove(@Param('id') id: string) {
-    return this.variablesClausulasService.remove(+id);
-  }
+  
 }
