# swagger/swagger.json
@@ -284,6 +284,39 @@
           "Espacios Físicos"
         ]
       }
+    },
+    "/variables-clausulas": {
+      "get": {
+        "operationId": "VariablesClausulasController_encontrarContratista",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Contrato encontrado exitosamente"
+          },
+          "400": {
+            "description": "Solicitud incorrecta"
+          },
+          "404": {
+            "description": "Contrato no encontrado"
+          },
+          "500": {
+            "description": "Error interno del servidor"
+          }
+        },
+        "summary": "Consulta las variables del Contrato para las clausulas",
+        "tags": [
+          "VariablesClausulas"
+        ]
+      }
     }
   },
   "info": {
